# t7patch-manager

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
data/: io.github.heyiamusingarchbtw.T7PatchManager.desktop  style.css
packaging/aur/: PKGBUILD  PKGBUILD.git
src/t7patch_manager/: __init__.py  __main__.py  config.py  installer.py  launch_wrappers.py  launcher.py  logger.py  opener.py  package_manager.py  paths.py  settings.py  state.py  steam_config.py  steam_roots.py  steam_vdf.py  ui.py
